[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wasm-sdk-core-py"
version = "0.1.0"
description = "Python bindings for WASM SDK Core using pyo3 and Boa engine"
authors = [
    {name = "WASM-SDK Team", email = "team@wasm-sdk.org"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["wasm", "wasi", "boa", "python", "runtime", "webassembly"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/wasm-sdk/wasm-sdk-core-py"
Repository = "https://github.com/wasm-sdk/wasm-sdk-core-py"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "wasm_sdk_core._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
